--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <select id="select-breed">
       <option disabled selected>Choose your breed</option>
     </select>
-
-
-
+    <button>Get Dog</button>
   </form>
+  <div id="dog-image"></div>
 
 </body>
 
